--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webbase",
+  "name": "setgo",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -15,10 +15,10 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.55.0",
+    "@sanity/vision": "^3.57.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.55.0",
+    "sanity": "^3.57.2",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
